--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -8,13 +8,41 @@ spec:
   selector:
     matchLabels:
       app: web
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
         app: web
     spec:
+      volumes:
+        - name: html-volume
+          configMap:
+            name: nginx-html
+
       containers:
-      - name: web
-        image: nginx:latest
-        ports:
-        - containerPort: 80
+        - name: web
+          image: nginx:latest
+          ports:
+            - containerPort: 80
+
+          volumeMounts:
+            - name: html-volume
+              mountPath: /usr/share/nginx/html
+
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 5
+
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 15
+            periodSeconds: 10
