--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -18,4 +18,11 @@ spec:
             name: web-service
             port:
               number: 80
+      - path: /api
+        pathType: Prefix
+        backend:
+          service:
+            name: api-service
+            port:
+              number: 80
 
