--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -32,6 +32,14 @@ spec:
           ports:
             - containerPort: 80
 
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "250m"
+              memory: "256Mi"
+
           volumeMounts:
             - name: html-volume
               mountPath: /usr/share/nginx/html
