Reset production namespace and deploy app via heml as single source of truth

--- a/webapp/templates/service.yaml
+++ b/webapp/templates/service.yaml
@@ -1,15 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "webapp.fullname" . }}
-  labels:
-    {{- include "webapp.labels" . | nindent 4 }}
+  name: {{ .Release.Name }}
 spec:
   type: {{ .Values.service.type }}
+  selector:
+    app: web
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
-  selector:
-    {{- include "webapp.selectorLabels" . | nindent 4 }}
+      targetPort: 80
