--- a/webapp/values.yaml
+++ b/webapp/values.yaml
@@ -24,6 +24,12 @@ autoscaling:
 
 resources: {}
 
+autoscaling:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 50
+
 config:
   indexHtml: |
     <html>
