--- a/webapp/values.yaml
+++ b/webapp/values.yaml
@@ -30,6 +30,10 @@ autoscaling:
   maxReplicas: 5
   targetCPUUtilizationPercentage: 50
 
+ingress: 
+  enabled: true
+  host: web.local
+
 config:
   indexHtml: |
     <html>
