--- a/webapp/values.yaml
+++ b/webapp/values.yaml
@@ -1,9 +1,12 @@
-replicaCount: 5
+replicaCount: 2
 
 image:
   repository: nginx
   tag: latest
   pullPolicy: IfNotPresent
+
+labels:
+  app: web
 
 service:
   type: ClusterIP
@@ -13,32 +16,23 @@ serviceAccount:
   create: false
   name: ""
 
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
+
 ingress:
   enabled: false
 
 httpRoute:
   enabled: false
 
-autoscaling:
-  enabled: false
-
-resources: {}
-
-autoscaling:
-  enabled: true
-  minReplicas: 2
-  maxReplicas: 5
-  targetCPUUtilizationPercentage: 50
-
-ingress: 
-  enabled: true
-  host: web.local
-
 config:
   indexHtml: |
     <html>
-    <body style="font-family: Arial;">
-      <h1>Served via Helm ConfigMap</h1>
-      <p>Helm is working 🚀</p>
-    </body>
+      <head><title>WebApp</title></head>
+      <body>
+        <h1>Helm WebApp is working 🚀</h1>
+      </body>
     </html>
