--- a/webapp/values.yaml
+++ b/webapp/values.yaml
@@ -1,23 +1,43 @@
-replicaCount: 2
+replicaCount: 3
 
 image:
   repository: nginx
   tag: latest
+  pullPolicy: IfNotPresent
 
 service:
   type: ClusterIP
   port: 80
 
-labels:
-  app: web
-
-serviceAccount:
-  create: false
+config:
+  enabled: true
+  indexHtml: |
+    <html>
+      <head><title>WebApp</title></head>
+      <body>
+        <h1>Hello from Helm + ArgoCD</h1>
+      </body>
+    </html>
 
 ingress:
-  enabled: true
-  host: web.local
+  enabled: false
+  className: nginx
+  hosts:
+    - host: web.local
+      paths:
+        - path: /
+          pathType: Prefix
+
+httpRoute:
+  enabled: false
 
 autoscaling:
   enabled: false
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
 
+resources: {}
+nodeSelector: {}
+tolerations: []
+affinity: {}
