--- a/webapp/templates/hpa.yaml
+++ b/webapp/templates/hpa.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.autoscaling.enabled }}
+{{- if and  .Values.autoscaling (eq .Values.autoscaling.enabled true) }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
