--- a/webapp/values-prod.yaml
+++ b/webapp/values-prod.yaml
@@ -9,4 +9,7 @@ ingress:
   enabled: true
 
 autoscaling:
-enabled: false
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 70
