Fix dev values: add image config so deployment renders

--- a/webapp/values-dev.yaml
+++ b/webapp/values-dev.yaml
@@ -1,22 +1,25 @@
-replicasCount: 1
+replicaCount: 1
 
-config:
+image:
+  repository: nginx
+  tag: latest
+  pullPolicy: IfNotPresent
+
+deployment:
   enabled: true
-  indexHtml: |
-    <h1>DEV ENVIRONMENT </h1>
 
 service:
   enabled: true
   type: ClusterIP
   port: 80
 
+config:
+  enabled: true
+  indexHtml: |
+    <h1>DEV ENVIRONMENT</h1>
+
 ingress:
   enabled: false
 
 autoscaling:
   enabled: false
-
-deployment:
-  enabled: true
-
-
