--- a/webapp/values-dev.yaml
+++ b/webapp/values-dev.yaml
@@ -13,6 +13,14 @@ service:
   type: ClusterIP
   port: 80
 
+resources:
+  requests:
+    cpu: 50m
+    memory: 64Mi
+  limits:
+    cpu: 100m
+    memory: 128Mi
+
 config:
   enabled: true
   indexHtml: |
