--- a/webapp/values-prod.yaml
+++ b/webapp/values-prod.yaml
@@ -8,6 +8,14 @@ config:
 ingress:
   enabled: true
 
+resources:
+  requests: 
+    cpu: 100m
+    memory: 128Mi
+  limits:
+    cpu: 500m
+    memory: 512Mi
+
 autoscaling:
   enabled: true
   minReplicas: 2
