--- a/webapp/templates/ingress.yaml
+++ b/webapp/templates/ingress.yaml
@@ -4,20 +4,16 @@ kind: Ingress
 metadata:
   name: {{ .Release.Name }}
 spec:
-  ingressClassName: {{ .Values.ingress.className }}
+  ingressClassName: nginx
   rules:
-  {{- range .Values.ingress.hosts }}
-    - host: {{ .host }}
+    - host: {{ .Values.ingress.host }}
       http:
         paths:
-        {{- range .paths }}
-          - path: {{ .path }}
-            pathType: {{ .pathType }}
+          - path: /
+            pathType: Prefix
             backend:
               service:
-                name: {{ $.Release.Name }}
+                name: {{ .Release.Name }}
                 port:
-                  number: {{ $.Values.service.port }}
-        {{- end }}
-  {{- end }}
+                  number: 80
 {{- end }}
