--- a/webapp/values-dev.yaml
+++ b/webapp/values-dev.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: ghcr.io/adiforstudy/webapp
   tag: latest
   pullPolicy: IfNotPresent
 
