--- a/webapp/values-dev.yaml
+++ b/webapp/values-dev.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: ghcr.io/adiforstudy/webapp
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 deployment:
   enabled: true
