--- a/webapp/values-prod.yaml
+++ b/webapp/values-prod.yaml
@@ -1,5 +1,10 @@
 replicasCount: 3
 
+image:
+  repository: ghcr.io/adiforstudy/webapp
+  tag: latest
+  pullPolicy: always
+
 config:
   enabled: true
   indexHtml: |
