--- a/webapp/values.yaml
+++ b/webapp/values.yaml
@@ -2,7 +2,8 @@ replicaCount: 3
 
 image:
   repository: ghcr.io/adiforstudy/webapp
-  tag: latest
+  tag: e50cb15
+  pullPolicy: IfNotPresent
 
 service:
   type: ClusterIP
