--- a/webapp/values.yaml
+++ b/webapp/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 3
 
 image:
   repository: ghcr.io/adiforstudy/webapp
-  tag: e50cb15
+  tag: Latest
   pullPolicy: IfNotPresent
 
 service:
