--- a/webapp/values-prod.yaml
+++ b/webapp/values-prod.yaml
@@ -2,8 +2,8 @@ replicasCount: 3
 
 image:
   repository: ghcr.io/adiforstudy/webapp
-  tag: 85c1a87
-  pullPolicy: IfNotPresent
+  tag: latest
+  pullPolicy: Always
 
 config:
   enabled: true
