--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push amd64 image (immutable tag)
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64
           push: true
-          tags: |
-            ghcr.io/adiforstudy/webapp:${{ github.sha }}
-            ghcr.io/adiforstudy/webapp:latest
+          tags: ghcr.io/adiforstudy/webapp:${{ github.sha }}
