--- a/webapp/templates/deployment.yaml
+++ b/webapp/templates/deployment.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: web
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
         - name: web
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
