--- a/.github/workflows/ci-build-push-ghcr.yaml
+++ b/.github/workflows/ci-build-push-ghcr.yaml
@@ -1,37 +1,56 @@
-name: Build and Push Docker Image to GHCR
+name: Build and Push Docker Image (GHCR)
 
 on:
   push:
     branches: ["main"]
-
-permissions:
-  contents: read
-  packages: write
+  workflow_dispatch:
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Debug workspace (prove files exist)
+        run: |
+          echo "PWD:"
+          pwd
+          echo "LS:"
+          ls -la
+          echo "Dockerfiles:"
+          find . -maxdepth 4 -type f -iname "Dockerfile*" -print
+          echo "Dockerfile content:"
+          cat ./Dockerfile
+          echo "App dir:"
+          ls -la ./app || true
+          echo "Index file:"
+          ls -la ./index.html || true
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GHCR
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and Push
+      - name: Build and push image (no cache)
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
+          no-cache: true
+          pull: true
           tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
+            ghcr.io/adiforstudy/webapp:latest
+            ghcr.io/adiforstudy/webapp:${{ github.sha }}
+
