--- a/.github/workflows/ci-build-push-ghcr.yaml
+++ b/.github/workflows/ci-build-push-ghcr.yaml
@@ -2,55 +2,48 @@ name: Build and Push Docker Image (GHCR)
 
 on:
   push:
-    branches: ["main"]
-  workflow_dispatch:
+    branches: [ "main" ]
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Debug workspace (prove files exist)
+      - name: Debug workspace
         run: |
-          echo "PWD:"
           pwd
-          echo "LS:"
           ls -la
-          echo "Dockerfiles:"
-          find . -maxdepth 4 -type f -iname "Dockerfile*" -print
-          echo "Dockerfile content:"
-          cat ./Dockerfile
-          echo "App dir:"
-          ls -la ./app || true
-          echo "Index file:"
-          ls -la ./index.html || true
+          echo "---- Dockerfile ----"
+          cat Dockerfile
+          echo "---- app folder ----"
+          ls -la app || true
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GHCR
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push image (no cache)
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
-          no-cache: true
-          pull: true
           tags: |
-            ghcr.io/adiforstudy/webapp:latest
-            ghcr.io/adiforstudy/webapp:${{ github.sha }}
-
+            ghcr.io/adiforstudy/k8s-production-app:latest
+            ghcr.io/adiforstudy/k8s-production-app:${{ github.sha }}
