--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -1,28 +1,23 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: argoproj.io/v1alpha1
+kind: Application
 metadata:
-  name: web-ingress
-  namespace: production
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  name: ingress-nginx
+  namespace: argocd
 spec:
-  ingressClassName: nginx
-  rules:
-  - host: web.local
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: web-service
-            port:
-              number: 80
-      - path: /api
-        pathType: Prefix
-        backend:
-          service:
-            name: api-service
-            port:
-              number: 80
+  project: default
 
+  source:
+    repoURL: https://github.com/adiforstudy/k8s-production-app.git
+    targetRevision: main
+    path: k8s/ingress-nginx
+
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: ingress-nginx
+
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
