--- a/k8s/ingress-nginx/install.yaml
+++ b/k8s/ingress-nginx/install.yaml
@@ -420,6 +420,10 @@ spec:
         app.kubernetes.io/part-of: ingress-nginx
         app.kubernetes.io/version: 1.11.1
     spec:
+      tolerations:
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
+          effect: "NoSchedule"
       containers:
       - args:
         - /nginx-ingress-controller
