feat: deploy production app via argocd gitops

--- a/webapp/templates/ingress.yaml
+++ b/webapp/templates/ingress.yaml
@@ -2,18 +2,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}
+  name: webapp
 spec:
-  ingressClassName: nginx
+  ingressClassName: {{ .Values.ingress.className }}
   rules:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
-          - path: /
+          - path: {{ .Values.ingress.path }}
             pathType: Prefix
             backend:
               service:
-                name: {{ .Release.Name }}
+                name: webapp
                 port:
                   number: 80
 {{- end }}
