--- a/webapp/templates/deployment.yaml
+++ b/webapp/templates/deployment.yaml
@@ -1,49 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}
-  labels:
-    app: web
+  name: webapp
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: web
+      app: webapp
   template:
     metadata:
       labels:
-        app: web
+        app: webapp
     spec:
-      imagePullSecrets:
-        - name: ghcr-secret
       containers:
-        - name: web
+        - name: webapp
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagepullPolicy: {{ .Values.image.pullpolicy }}
-
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: 80
-
           resources:
-            requests:
-              cpu: {{ .Values.resources.requests.cpu | default "100m" }}
-              memory: {{ .Values.resources.requests.memory | default "128Mi" }}
-            limits:
-              cpu: {{ .Values.resources.limits.cpu | default "250m" }}
-              memory: {{ .Values.resources.limits.memory | default "256Mi" }}
-
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 80
-            initialDelaySeconds: 15
-            periodSeconds: 10
-            failureThreshold: 3
-
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 80
-            initialDelaySeconds: 5
-            periodSeconds: 5
-            failureThreshold: 3
+            {{- toYaml .Values.resources | nindent 12 }}
